--- a/contact/thanks/index.html
+++ b/contact/thanks/index.html
@@ -33,6 +33,7 @@
 
 	<link rel="stylesheet"
 		href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,100,0,0" />
+	<link rel="canonical" href="https://taxi-mate.jp/contact/thanks/">
 </head>
 
 <body>
