--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -11,7 +11,7 @@
 	<title>タクシー転職するなら【タクシーメイト】に登録｜タクシーメイト</title>
 	<meta name="description" content="タクシーの求人・転職情報をお探しなら一都三県で豊富な実績のある「タクシーメイト」。タクシー業界を知り尽くしたキャリアアドバイザーがあなたの転職をサポートします。">
 	<meta name="keywords" content="タクシーメイト,タクシー,ドライバー,求人,転職">
-	<link rel="canonical" href="https://taxi-mate.jp/"> <!-- /taxi-mate.jp, /taxi-mate.jp/index.html でアクセスされても /taxi-mate.jp/ が正規だという記載 -->
+	<link rel="canonical" href="https://taxi-mate.jp/lp-1/"> <!-- /taxi-mate.jp/lp-1, /taxi-mate.jp/lp-1/index.html でアクセスされても /taxi-mate.jp/lp-1/ が正規だという記載 -->
 	<link rel="icon" href="../images/favicons/favicon.ico">
 
 	<!-- Google Tag Manager -->
