--- a/registration/index.html
+++ b/registration/index.html
@@ -64,6 +64,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,100,0,0"
     />
+    <link rel="canonical" href="https://taxi-mate.jp/registration/">
 </head>
 
 <body>
